HLT-2935 Fix for tablets to shift text to separate line

--- a/src/main/webapp/bundles/health/less/benefits.less
+++ b/src/main/webapp/bundles/health/less/benefits.less
@@ -217,7 +217,7 @@
 		.accident-only-container {
 			padding:10px;
 		}
-		
+
 		background-color: #fff;
 
 	}
@@ -307,6 +307,15 @@
 		padding: 0;
 		margin: 0;
 	}
+	.accident-only-container {
+		span {
+			line-height: inherit;
+			display: block;
+		}
+	}
+}
+
+@media (@sm-only) {
 	.accident-only-container {
 		span {
 			line-height: inherit;
